[tool.poetry]
name = "pyops"
version = "0.1.2"
description = ""
authors = ["kimdw9983 <93891414+kimdw9983@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
